#120. Generate produces invalid strings when terminal character '$' is inside the expression
Removed AI thrash, fixed some tests